Revision history for Business::Shipping.

0.04
	- Interchange usertag bugfixes
	- Some USPS bugfixes.
	- Additional debugging information.
	- Reducing indirect notation.
	- Experiencing some problems with xps-query.

0.03
	- Changed name to Business::Shipping.
	- Fixed POD for the Ship.pm file.
	- Add dependency requirements
	- Misc updates.

0.02  Sat May 31 18:04:00 2003
	- Testing overhaul
	- Lots of bug fixes (uncovered by testing, mostly for USPS)
	- Added "make readme"
	- Moving stuff around again.
	- Launched http://www.kavod.com/Business-Shipping
	- API Changes:
		+ None.


0.01  Fri May 30 22:45:11 2003
	- Moved everything around a lot
	- Packaged everything like standard Perl modules
	- Documentation now up to date with code.
	- Updates to [xps-query]
	- More refactoring all over the place
	- Bug fixes
	- UPS:
		+ Added validation
		+ Corrected caching
		+ Accepts english pickup types ("daily pickup" vs. 01)
	- API Changes:
		+ Tons.  Starting to settle down, though...  

		
0.00  Sun May 25 16:00:00 2003
	- UPS fully ported to Business::Ship architecture
	- Lots of other refactoring.
	- Considering a Business::Ship::___::Internal for internal lookups.
  		+ If done, it would be based off of Mike's recent commits.

		
0.00  Fri May 9 12:51:00 2003
	- Lots of clean up
    - Re-organizing order of methods for easier browsing.

	- Documentation
    - Updates for USPS and Business::Ship API
    - Code and docs now in sync, except for UPS.
    - Sample shipping.asc entry for [xps-query]
	
	- Mapped all "package-level" methods/data accessors to
      Business::Ship::default_package().
 
	- USPS:
    - The beginnings of self-validation.
    - submit() and _handle_response() now separate
    - submit() moved to Business::Ship for UPS to share (later)
 
	- UPS:
    - Getting ready for re-design to take advantage of new API. 
 
	- [xps-query]:
    - Fix bug wrt weights less than 0.5
	
	- Lots of misc.
