@@ -2,7 +2,7 @@ use 5.006000;
 use ExtUtils::MakeMaker;
 
 # Version for Business-Shipping as a whole.
-$VERSION = '0.03';
+$VERSION = '0.04';
 
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
@@ -31,3 +31,7 @@ readme :
 MAKE_README
 }
 
+#
+# It is better to test with:
+# export TEST_VERBOSE=1; make test
+#
