@@ -2,14 +2,14 @@
 # This program is free software; you can redistribute it and/or modify it 
 # under the same terms as Perl itself.
 #
-# $Id: Package.pm,v 1.1 2003/06/04 21:41:10 db-ship Exp $
+# $Id: Package.pm,v 1.2 2003/06/24 22:59:57 db-ship Exp $
 
 package Business::Shipping::USPS::Package;
 use strict;
 use warnings;
 
 use vars qw(@ISA $VERSION);
-$VERSION = do { my @r=(q$Revision: 1.1 $=~/\d+/g); sprintf "%d."."%03d"x$#r,@r };
+$VERSION = do { my @r=(q$Revision: 1.2 $=~/\d+/g); sprintf "%d."."%03d"x$#r,@r };
 
 use Business::Shipping::Package;
 use Data::Dumper;
@@ -23,10 +23,9 @@ my %options_defaults = (
 	machinable	=> 'False',
 	mail_type	=> 'Package',
 	from_zip	=> undef,
-	to_zip		=> undef,
 	from_country	=> undef,
-	to_country	=> undef,
 );
+
 
 sub new
 {
@@ -42,8 +41,30 @@ sub new
 	
 	bless( $self, $class );
 	
+	# Initilize the "manual" data items:
+	$self->to_zip( undef );
+	$self->to_country( undef );
+	
 	return $self;
 }
+
+
+sub to_zip
+{
+	my $self = shift;
+	
+	if ( @_ ) {
+		my $to_zip = shift;
+		
+		# Need to throw away the "plus four" of zip+four.
+		$to_zip =~ /{\d,5}/ if $to_zip;
+		
+		$self->{ 'to_zip' } = $to_zip;
+	}
+	
+	return $self->{ 'to_zip' };
+}
+
 
 sub from_country
 {
@@ -52,8 +73,39 @@ sub from_country
 }
 
 
+sub to_country
+{
+	my $self = shift;	
+	if ( @_ ) {
+		my $new_to_country = shift;
+		$new_to_country = $self->_country_name_translator( $new_to_country );
+		$self->{ 'to_country' } = $new_to_country;
+	} 
+	return $self->{ 'to_country' };
+}
+
+# Translate common usages (Great Britain) into the USPS proper name
+# (Great Britain and Northern Ireland).
+sub _country_name_translator
+{
+	my ( $self, $country ) = @_;
+	my %country_translator = (
+		'Great Britain' => 'Great Britain and Northern Ireland',
+		'United Kingdom' => 'Great Britain and Northern Ireland',
+		'France, Metropolitan' => 'France',
+	);
+	if ( $country and $country_translator{ $country } ) {
+		return $country_translator{ $country };
+	}
+	else {
+		return $country;
+	}
+}
+
+
 # Alias pounds to 'weight'
 sub pounds { return shift->weight( @_ ) }
+
 
 sub weight
 {
@@ -70,12 +122,14 @@ sub weight
 	return $self->{'pounds'};
 }
 
+
 sub _round_up
 {
 	my ( $self, $f ) = @_;
 	return undef unless defined $f; 
 	return sprintf( "%1.0f", $f );
 }
+
 
 sub get_unique_values
 {
